--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+
+.pf-text-welcome {
+    color: #9c9c9c;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.pf-text-header {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2em;
+}
+
 .pf-top-vh {
     height: 100vh;
     margin-left: 0px;
@@ -5,7 +16,7 @@
 }
 
 .pf-topleft-bg {
-    background-size:100% auto;
+    background-size: 100% auto;
     background-repeat: no-repeat;
     background-image: url(../images/scroller.jpg);
     height: 100%;
@@ -22,4 +33,8 @@
     height: 200px;
     margin-left: 0px;
     margin-right: 0px;
+}
+
+.pf-padding-zero {
+    padding: 0px;
 }
